k8s/base/webhook/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: aios-webhook
  namespace: aios
  labels:
    app.kubernetes.io/name: aios-webhook
    app.kubernetes.io/part-of: aios
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`aios-webhook.lab.kazie.co.uk`)
      kind: Rule
      services:
        - name: aios-webhook
          port: 80
  tls:
    certResolver: cloudflare
